// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`settingDrawer.test base user 1`] = `
<div
  class=""
>
  <div
    class="ant-drawer ant-drawer-right"
    style="z-index:999"
    tabindex="-1"
  >
    <div
      class="ant-drawer-mask"
    />
    <div
      class="ant-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:300px"
    >
      <div
        class="ant-drawer-content"
      >
        <div
          class="ant-drawer-wrapper-body"
        >
          <div
            class="ant-drawer-header-no-title"
          >
            <button
              aria-label="Close"
              class="ant-drawer-close"
            >
              <i
                aria-label="icon: close"
                class="anticon anticon-close"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="close"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                  />
                </svg>
              </i>
            </button>
          </div>
          <div
            class="ant-drawer-body"
          >
            <div
              class="ant-pro-setting-drawer-content"
            >
              <div
                style="margin-bottom:24px"
              >
                <h3
                  class="ant-pro-setting-drawer-title"
                >
                  Page style setting
                </h3>
                <div
                  class="ant-pro-setting-drawer-block-checbox"
                >
                  <div
                    class="ant-pro-setting-drawer-block-checbox-item"
                  >
                    <img
                      alt="light"
                      src="https://gw.alipayobjects.com/zos/antfincdn/NQ%24zoisaD2/jpRkZQMyYRryryPNtyIC.svg"
                    />
                    <div
                      class="ant-pro-setting-drawer-block-checbox-selectIcon"
                      style="display:none"
                    >
                      <i
                        aria-label="icon: check"
                        class="anticon anticon-check"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="check"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 0 0-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                          />
                        </svg>
                      </i>
                    </div>
                  </div>
                  <div
                    class="ant-pro-setting-drawer-block-checbox-item"
                  >
                    <img
                      alt="dark"
                      src="https://gw.alipayobjects.com/zos/antfincdn/XwFOFbLkSM/LCkqqYNmvBEbokSDscrm.svg"
                    />
                    <div
                      class="ant-pro-setting-drawer-block-checbox-selectIcon"
                      style="display:block"
                    >
                      <i
                        aria-label="icon: check"
                        class="anticon anticon-check"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="check"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 0 0-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                          />
                        </svg>
                      </i>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="theme-color"
              >
                <h3
                  class="theme-color-title"
                >
                  Theme Color
                </h3>
                <div
                  class="theme-color-content"
                >
                  <div
                    class="theme-color-block"
                    style="background-color:#1890ff"
                  >
                    <i
                      aria-label="icon: check"
                      class="anticon anticon-check"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="check"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 0 0-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                        />
                      </svg>
                    </i>
                  </div>
                </div>
              </div>
              <div
                class="ant-divider ant-divider-horizontal"
                role="separator"
              />
              <div
                style="margin-bottom:24px"
              >
                <h3
                  class="ant-pro-setting-drawer-title"
                >
                  Navigation Mode
                </h3>
                <div
                  class="ant-pro-setting-drawer-block-checbox"
                >
                  <div
                    class="ant-pro-setting-drawer-block-checbox-item"
                  >
                    <img
                      alt="sidemenu"
                      src="https://gw.alipayobjects.com/zos/antfincdn/XwFOFbLkSM/LCkqqYNmvBEbokSDscrm.svg"
                    />
                    <div
                      class="ant-pro-setting-drawer-block-checbox-selectIcon"
                      style="display:block"
                    >
                      <i
                        aria-label="icon: check"
                        class="anticon anticon-check"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="check"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 0 0-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                          />
                        </svg>
                      </i>
                    </div>
                  </div>
                  <div
                    class="ant-pro-setting-drawer-block-checbox-item"
                  >
                    <img
                      alt="topmenu"
                      src="https://gw.alipayobjects.com/zos/antfincdn/URETY8%24STp/KDNDBbriJhLwuqMoxcAr.svg"
                    />
                    <div
                      class="ant-pro-setting-drawer-block-checbox-selectIcon"
                      style="display:none"
                    >
                      <i
                        aria-label="icon: check"
                        class="anticon anticon-check"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="check"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 0 0-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                          />
                        </svg>
                      </i>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-list"
              >
                <div
                  class="ant-spin-nested-loading"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <ul
                      class="ant-list-items"
                    >
                      <li
                        class="ant-list-item"
                      >
                        <span
                          style="opacity:1"
                        >
                          Content Width
                        </span>
                        <ul
                          class="ant-list-item-action"
                        >
                          <li>
                            <div
                              class="ant-select-sm ant-select ant-select-enabled"
                              style="width:80px"
                            >
                              <div
                                aria-autocomplete="list"
                                aria-controls=""
                                aria-expanded="false"
                                aria-haspopup="true"
                                class="ant-select-selection
            ant-select-selection--single"
                                role="combobox"
                                tabindex="0"
                              >
                                <div
                                  class="ant-select-selection__rendered"
                                >
                                  <div
                                    class="ant-select-selection-selected-value"
                                    style="display:block;opacity:1"
                                    title="Fluid"
                                  >
                                    Fluid
                                  </div>
                                </div>
                                <span
                                  class="ant-select-arrow"
                                  style="user-select:none;-webkit-user-select:none"
                                  unselectable="on"
                                >
                                  <i
                                    aria-label="icon: down"
                                    class="anticon anticon-down ant-select-arrow-icon"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class=""
                                      data-icon="down"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                      />
                                    </svg>
                                  </i>
                                </span>
                              </div>
                            </div>
                          </li>
                        </ul>
                      </li>
                      <li
                        class="ant-list-item"
                      >
                        <span
                          style="opacity:1"
                        >
                          Fixed Header
                        </span>
                        <ul
                          class="ant-list-item-action"
                        >
                          <li>
                            <button
                              aria-checked="false"
                              class="ant-switch-small ant-switch"
                              role="switch"
                              type="button"
                            >
                              <span
                                class="ant-switch-inner"
                              />
                            </button>
                          </li>
                        </ul>
                      </li>
                      <li
                        class="ant-list-item"
                      >
                        <span
                          style="opacity:1"
                        >
                          Fixed Sidebar
                        </span>
                        <ul
                          class="ant-list-item-action"
                        >
                          <li>
                            <button
                              aria-checked="false"
                              class="ant-switch-small ant-switch"
                              role="switch"
                              type="button"
                            >
                              <span
                                class="ant-switch-inner"
                              />
                            </button>
                          </li>
                        </ul>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
              <div
                class="ant-divider ant-divider-horizontal"
                role="separator"
              />
              <div
                style="margin-bottom:24px"
              >
                <h3
                  class="ant-pro-setting-drawer-title"
                >
                  Other Settings
                </h3>
                <div
                  class="ant-list"
                >
                  <div
                    class="ant-spin-nested-loading"
                  >
                    <div
                      class="ant-spin-container"
                    >
                      <ul
                        class="ant-list-items"
                      >
                        <li
                          class="ant-list-item"
                        >
                          <span
                            style="opacity:1"
                          >
                            Weak Mode
                          </span>
                          <ul
                            class="ant-list-item-action"
                          >
                            <li>
                              <button
                                aria-checked="false"
                                class="ant-switch-small ant-switch"
                                role="switch"
                                type="button"
                              >
                                <span
                                  class="ant-switch-inner"
                                />
                              </button>
                            </li>
                          </ul>
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-divider ant-divider-horizontal"
                role="separator"
              />
              <button
                class="ant-btn ant-btn-block"
                type="button"
              >
                <i
                  aria-label="icon: copy"
                  class="anticon anticon-copy"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="copy"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                    />
                  </svg>
                </i>
                <span>
                  Copy Setting
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-pro-setting-drawer-handle"
      >
        <i
          aria-label="icon: close"
          class="anticon anticon-close"
          style="color:#fff;font-size:20px"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="close"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
  </div>
</div>
`;

exports[`settingDrawer.test hideColors = true 1`] = `
<div
  class=""
>
  <div
    class="ant-drawer ant-drawer-right"
    style="z-index:999"
    tabindex="-1"
  >
    <div
      class="ant-drawer-mask"
    />
    <div
      class="ant-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:300px"
    >
      <div
        class="ant-drawer-content"
      >
        <div
          class="ant-drawer-wrapper-body"
        >
          <div
            class="ant-drawer-header-no-title"
          >
            <button
              aria-label="Close"
              class="ant-drawer-close"
            >
              <i
                aria-label="icon: close"
                class="anticon anticon-close"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="close"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                  />
                </svg>
              </i>
            </button>
          </div>
          <div
            class="ant-drawer-body"
          >
            <div
              class="ant-pro-setting-drawer-content"
            >
              <div
                style="margin-bottom:24px"
              >
                <h3
                  class="ant-pro-setting-drawer-title"
                >
                  Page style setting
                </h3>
                <div
                  class="ant-pro-setting-drawer-block-checbox"
                >
                  <div
                    class="ant-pro-setting-drawer-block-checbox-item"
                  >
                    <img
                      alt="light"
                      src="https://gw.alipayobjects.com/zos/antfincdn/NQ%24zoisaD2/jpRkZQMyYRryryPNtyIC.svg"
                    />
                    <div
                      class="ant-pro-setting-drawer-block-checbox-selectIcon"
                      style="display:none"
                    >
                      <i
                        aria-label="icon: check"
                        class="anticon anticon-check"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="check"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 0 0-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                          />
                        </svg>
                      </i>
                    </div>
                  </div>
                  <div
                    class="ant-pro-setting-drawer-block-checbox-item"
                  >
                    <img
                      alt="dark"
                      src="https://gw.alipayobjects.com/zos/antfincdn/XwFOFbLkSM/LCkqqYNmvBEbokSDscrm.svg"
                    />
                    <div
                      class="ant-pro-setting-drawer-block-checbox-selectIcon"
                      style="display:block"
                    >
                      <i
                        aria-label="icon: check"
                        class="anticon anticon-check"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="check"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 0 0-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                          />
                        </svg>
                      </i>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-divider ant-divider-horizontal"
                role="separator"
              />
              <div
                style="margin-bottom:24px"
              >
                <h3
                  class="ant-pro-setting-drawer-title"
                >
                  Navigation Mode
                </h3>
                <div
                  class="ant-pro-setting-drawer-block-checbox"
                >
                  <div
                    class="ant-pro-setting-drawer-block-checbox-item"
                  >
                    <img
                      alt="sidemenu"
                      src="https://gw.alipayobjects.com/zos/antfincdn/XwFOFbLkSM/LCkqqYNmvBEbokSDscrm.svg"
                    />
                    <div
                      class="ant-pro-setting-drawer-block-checbox-selectIcon"
                      style="display:block"
                    >
                      <i
                        aria-label="icon: check"
                        class="anticon anticon-check"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="check"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 0 0-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                          />
                        </svg>
                      </i>
                    </div>
                  </div>
                  <div
                    class="ant-pro-setting-drawer-block-checbox-item"
                  >
                    <img
                      alt="topmenu"
                      src="https://gw.alipayobjects.com/zos/antfincdn/URETY8%24STp/KDNDBbriJhLwuqMoxcAr.svg"
                    />
                    <div
                      class="ant-pro-setting-drawer-block-checbox-selectIcon"
                      style="display:none"
                    >
                      <i
                        aria-label="icon: check"
                        class="anticon anticon-check"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="check"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 0 0-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                          />
                        </svg>
                      </i>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-list"
              >
                <div
                  class="ant-spin-nested-loading"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <ul
                      class="ant-list-items"
                    >
                      <li
                        class="ant-list-item"
                      >
                        <span
                          style="opacity:1"
                        >
                          Content Width
                        </span>
                        <ul
                          class="ant-list-item-action"
                        >
                          <li>
                            <div
                              class="ant-select-sm ant-select ant-select-enabled"
                              style="width:80px"
                            >
                              <div
                                aria-autocomplete="list"
                                aria-controls=""
                                aria-expanded="false"
                                aria-haspopup="true"
                                class="ant-select-selection
            ant-select-selection--single"
                                role="combobox"
                                tabindex="0"
                              >
                                <div
                                  class="ant-select-selection__rendered"
                                >
                                  <div
                                    class="ant-select-selection-selected-value"
                                    style="display:block;opacity:1"
                                    title="Fluid"
                                  >
                                    Fluid
                                  </div>
                                </div>
                                <span
                                  class="ant-select-arrow"
                                  style="user-select:none;-webkit-user-select:none"
                                  unselectable="on"
                                >
                                  <i
                                    aria-label="icon: down"
                                    class="anticon anticon-down ant-select-arrow-icon"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class=""
                                      data-icon="down"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                      />
                                    </svg>
                                  </i>
                                </span>
                              </div>
                            </div>
                          </li>
                        </ul>
                      </li>
                      <li
                        class="ant-list-item"
                      >
                        <span
                          style="opacity:1"
                        >
                          Fixed Header
                        </span>
                        <ul
                          class="ant-list-item-action"
                        >
                          <li>
                            <button
                              aria-checked="false"
                              class="ant-switch-small ant-switch"
                              role="switch"
                              type="button"
                            >
                              <span
                                class="ant-switch-inner"
                              />
                            </button>
                          </li>
                        </ul>
                      </li>
                      <li
                        class="ant-list-item"
                      >
                        <span
                          style="opacity:1"
                        >
                          Fixed Sidebar
                        </span>
                        <ul
                          class="ant-list-item-action"
                        >
                          <li>
                            <button
                              aria-checked="false"
                              class="ant-switch-small ant-switch"
                              role="switch"
                              type="button"
                            >
                              <span
                                class="ant-switch-inner"
                              />
                            </button>
                          </li>
                        </ul>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
              <div
                class="ant-divider ant-divider-horizontal"
                role="separator"
              />
              <div
                style="margin-bottom:24px"
              >
                <h3
                  class="ant-pro-setting-drawer-title"
                >
                  Other Settings
                </h3>
                <div
                  class="ant-list"
                >
                  <div
                    class="ant-spin-nested-loading"
                  >
                    <div
                      class="ant-spin-container"
                    >
                      <ul
                        class="ant-list-items"
                      >
                        <li
                          class="ant-list-item"
                        >
                          <span
                            style="opacity:1"
                          >
                            Weak Mode
                          </span>
                          <ul
                            class="ant-list-item-action"
                          >
                            <li>
                              <button
                                aria-checked="false"
                                class="ant-switch-small ant-switch"
                                role="switch"
                                type="button"
                              >
                                <span
                                  class="ant-switch-inner"
                                />
                              </button>
                            </li>
                          </ul>
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-divider ant-divider-horizontal"
                role="separator"
              />
              <button
                class="ant-btn ant-btn-block"
                type="button"
              >
                <i
                  aria-label="icon: copy"
                  class="anticon anticon-copy"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="copy"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                    />
                  </svg>
                </i>
                <span>
                  Copy Setting
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-pro-setting-drawer-handle"
      >
        <i
          aria-label="icon: close"
          class="anticon anticon-close"
          style="color:#fff;font-size:20px"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="close"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
  </div>
</div>
`;

exports[`settingDrawer.test settings = undefined 1`] = `
<div
  class=""
>
  <div
    class="ant-drawer ant-drawer-right"
    style="z-index:999"
    tabindex="-1"
  >
    <div
      class="ant-drawer-mask"
    />
    <div
      class="ant-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:300px"
    >
      <div
        class="ant-drawer-content"
      >
        <div
          class="ant-drawer-wrapper-body"
        >
          <div
            class="ant-drawer-header-no-title"
          >
            <button
              aria-label="Close"
              class="ant-drawer-close"
            >
              <i
                aria-label="icon: close"
                class="anticon anticon-close"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="close"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                  />
                </svg>
              </i>
            </button>
          </div>
          <div
            class="ant-drawer-body"
          >
            <div
              class="ant-pro-setting-drawer-content"
            >
              <div
                style="margin-bottom:24px"
              >
                <h3
                  class="ant-pro-setting-drawer-title"
                >
                  Page style setting
                </h3>
                <div
                  class="ant-pro-setting-drawer-block-checbox"
                >
                  <div
                    class="ant-pro-setting-drawer-block-checbox-item"
                  >
                    <img
                      alt="light"
                      src="https://gw.alipayobjects.com/zos/antfincdn/NQ%24zoisaD2/jpRkZQMyYRryryPNtyIC.svg"
                    />
                    <div
                      class="ant-pro-setting-drawer-block-checbox-selectIcon"
                      style="display:none"
                    >
                      <i
                        aria-label="icon: check"
                        class="anticon anticon-check"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="check"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 0 0-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                          />
                        </svg>
                      </i>
                    </div>
                  </div>
                  <div
                    class="ant-pro-setting-drawer-block-checbox-item"
                  >
                    <img
                      alt="dark"
                      src="https://gw.alipayobjects.com/zos/antfincdn/XwFOFbLkSM/LCkqqYNmvBEbokSDscrm.svg"
                    />
                    <div
                      class="ant-pro-setting-drawer-block-checbox-selectIcon"
                      style="display:block"
                    >
                      <i
                        aria-label="icon: check"
                        class="anticon anticon-check"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="check"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 0 0-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                          />
                        </svg>
                      </i>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="theme-color"
              >
                <h3
                  class="theme-color-title"
                >
                  Theme Color
                </h3>
                <div
                  class="theme-color-content"
                >
                  <div
                    class="theme-color-block"
                    style="background-color:#1890ff"
                  >
                    <i
                      aria-label="icon: check"
                      class="anticon anticon-check"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="check"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 0 0-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                        />
                      </svg>
                    </i>
                  </div>
                </div>
              </div>
              <div
                class="ant-divider ant-divider-horizontal"
                role="separator"
              />
              <div
                style="margin-bottom:24px"
              >
                <h3
                  class="ant-pro-setting-drawer-title"
                >
                  Navigation Mode
                </h3>
                <div
                  class="ant-pro-setting-drawer-block-checbox"
                >
                  <div
                    class="ant-pro-setting-drawer-block-checbox-item"
                  >
                    <img
                      alt="sidemenu"
                      src="https://gw.alipayobjects.com/zos/antfincdn/XwFOFbLkSM/LCkqqYNmvBEbokSDscrm.svg"
                    />
                    <div
                      class="ant-pro-setting-drawer-block-checbox-selectIcon"
                      style="display:block"
                    >
                      <i
                        aria-label="icon: check"
                        class="anticon anticon-check"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="check"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 0 0-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                          />
                        </svg>
                      </i>
                    </div>
                  </div>
                  <div
                    class="ant-pro-setting-drawer-block-checbox-item"
                  >
                    <img
                      alt="topmenu"
                      src="https://gw.alipayobjects.com/zos/antfincdn/URETY8%24STp/KDNDBbriJhLwuqMoxcAr.svg"
                    />
                    <div
                      class="ant-pro-setting-drawer-block-checbox-selectIcon"
                      style="display:none"
                    >
                      <i
                        aria-label="icon: check"
                        class="anticon anticon-check"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="check"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 0 0-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                          />
                        </svg>
                      </i>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-list"
              >
                <div
                  class="ant-spin-nested-loading"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <ul
                      class="ant-list-items"
                    >
                      <li
                        class="ant-list-item"
                      >
                        <span
                          style="opacity:1"
                        >
                          Content Width
                        </span>
                        <ul
                          class="ant-list-item-action"
                        >
                          <li>
                            <div
                              class="ant-select-sm ant-select ant-select-enabled"
                              style="width:80px"
                            >
                              <div
                                aria-autocomplete="list"
                                aria-controls=""
                                aria-expanded="false"
                                aria-haspopup="true"
                                class="ant-select-selection
            ant-select-selection--single"
                                role="combobox"
                                tabindex="0"
                              >
                                <div
                                  class="ant-select-selection__rendered"
                                >
                                  <div
                                    class="ant-select-selection-selected-value"
                                    style="display:block;opacity:1"
                                    title="Fixed"
                                  >
                                    Fixed
                                  </div>
                                </div>
                                <span
                                  class="ant-select-arrow"
                                  style="user-select:none;-webkit-user-select:none"
                                  unselectable="on"
                                >
                                  <i
                                    aria-label="icon: down"
                                    class="anticon anticon-down ant-select-arrow-icon"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class=""
                                      data-icon="down"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                      />
                                    </svg>
                                  </i>
                                </span>
                              </div>
                            </div>
                          </li>
                        </ul>
                      </li>
                      <li
                        class="ant-list-item"
                      >
                        <span
                          style="opacity:1"
                        >
                          Fixed Header
                        </span>
                        <ul
                          class="ant-list-item-action"
                        >
                          <li>
                            <button
                              aria-checked="false"
                              class="ant-switch-small ant-switch"
                              role="switch"
                              type="button"
                            >
                              <span
                                class="ant-switch-inner"
                              />
                            </button>
                          </li>
                        </ul>
                      </li>
                      <li
                        class="ant-list-item"
                      >
                        <span
                          style="opacity:1"
                        >
                          Fixed Sidebar
                        </span>
                        <ul
                          class="ant-list-item-action"
                        >
                          <li>
                            <button
                              aria-checked="false"
                              class="ant-switch-small ant-switch"
                              role="switch"
                              type="button"
                            >
                              <span
                                class="ant-switch-inner"
                              />
                            </button>
                          </li>
                        </ul>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
              <div
                class="ant-divider ant-divider-horizontal"
                role="separator"
              />
              <div
                style="margin-bottom:24px"
              >
                <h3
                  class="ant-pro-setting-drawer-title"
                >
                  Other Settings
                </h3>
                <div
                  class="ant-list"
                >
                  <div
                    class="ant-spin-nested-loading"
                  >
                    <div
                      class="ant-spin-container"
                    >
                      <ul
                        class="ant-list-items"
                      >
                        <li
                          class="ant-list-item"
                        >
                          <span
                            style="opacity:1"
                          >
                            Weak Mode
                          </span>
                          <ul
                            class="ant-list-item-action"
                          >
                            <li>
                              <button
                                aria-checked="false"
                                class="ant-switch-small ant-switch"
                                role="switch"
                                type="button"
                              >
                                <span
                                  class="ant-switch-inner"
                                />
                              </button>
                            </li>
                          </ul>
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-divider ant-divider-horizontal"
                role="separator"
              />
              <button
                class="ant-btn ant-btn-block"
                type="button"
              >
                <i
                  aria-label="icon: copy"
                  class="anticon anticon-copy"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="copy"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                    />
                  </svg>
                </i>
                <span>
                  Copy Setting
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-pro-setting-drawer-handle"
      >
        <i
          aria-label="icon: close"
          class="anticon anticon-close"
          style="color:#fff;font-size:20px"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="close"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
  </div>
</div>
`;
